deployments/vtb/vtb-wildcard-ingress.yaml
# VTB API Ingress using wildcard certificate
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vtb-api-ingress-wildcard
  namespace: vtb-test
  annotations:
    # Use wildcard certificate instead of generating new one
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - tst.api.visualtourbuilder.com
    secretName: wildcard-api-visualtourbuilder-com-tls
  rules:
  - host: tst.api.visualtourbuilder.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vtb-api-service
            port:
              number: 80
